decouple fibonacci computing
