# src/routes/computing/fibonacci.routes.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import {
   getFibonacci,
   getFibonacciSequence,
+  scheduleFibonacciCalculation,
 } from '@/controllers/computing/fibonacci.controller';
 
 const router = Router();
@@ -11,5 +12,7 @@ router.get('/', getFibonacci);
 
 // GET /fibonacci/sequence?count=5 - Get fibonacci sequence
 router.get('/sequence', getFibonacciSequence);
+
+router.get('/schedule', scheduleFibonacciCalculation);
 
 export default router;
